--- a/public/css/app.css
+++ b/public/css/app.css
@@ -50,7 +50,10 @@ nav.fixed a { color: #fff; }
 nav.fixed li ul a { color: #fff; }
 #fixed-padding { height: 67px; }
 
-.content { min-height: 500px; }
+.content { min-height: 400px; padding: 0 0 100px 0; }
+.product-item { border: 1px solid #eee; padding: 15px; text-align: center; min-height: 500px; }
+.products .product-name { font-size: 20pt; font-weight: 300; margin: 0 0 15px 0; text-align: center; color: #8c151a; }
+.products .product-description { font-size: 12pt; font-weight: 300; margin: 0 0 15px 0; line-height: 1.3; }
 
 #section-first { background: #f9fafb; }
 .greetings-title { font-weight: 300; text-align: center; font-size: 20pt; margin: 40px 0 10px 0; }
