--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20,10 +20,11 @@ header { min-height: 400px; background: #4b4539 url('../img/header-bg-2.jpg') ce
 .header-top { background:rgba(0,0,0,0.4); padding: 20px 0; font-weight: 300; }
 .brand { font-size: 50pt; font-style: italic; text-align: center; margin: 50px 0 0 0; text-shadow: 1px 1px 1px rgba(0,0,0,0.4); }
 .logo { text-align: center; }
-.logo img { margin: 30px 0 0 0; }
+.logo img { margin: 10px 0 20px 0; }
+.logo-text { margin: 60px 0 0 0; }
 .slogan-line { text-align: center; }
 .slogan { font-weight: 300; text-transform: uppercase; text-align: center; width: 80%; padding: 20px 0 0 0; margin: 0 auto; }
-.slogan-side { font-style: italic; font-size: 15pt; text-align: center; margin: 130px 0 0 0;  }
+.slogan-side { font-style: italic; font-size: 15pt; text-align: center; margin: 160px 0 0 0;  }
 
 nav { text-align: center; background: #333; margin: -52px 0 0 0; }
 nav ul { *zoom:1; list-style: none; padding: 0; margin: 0; font-size: 12pt; display: inline-block; }
@@ -81,7 +82,7 @@ footer { background: #333; padding: 20px 0; color: #fff; }
     transition: all 0.7s ease;
 }
 
-.slider-controls { text-align: center; margin: 15px 0 0 0; }
+.slider-controls { text-align: center; margin: 125px 0 0 0; }
 .slider-controls span { display: inline-block; cursor: pointer; margin: 0 5px; background: #fff; border: 1px solid #bbb; height: 10px; width: 10px; border-radius: 50%; box-shadow: 2px 2px 10px rgba(0,0,0,0.5); }
 
 .icon-bar { border-color: #fff; border-width: 1px; border-style: solid; }
@@ -97,13 +98,15 @@ nav.fixed { z-index: 999; }
     .text-xl { font-size: 30pt; }
     .text-l { font-size: 20pt; }
 
+    .logo img { margin: 10px 0 10px 0; }
+    .logo-text { margin: 10px 0 0 0; text-align: center; }
     .header-top { padding: 10px 0; }
     .slogan-side { margin: 15px 0 15px 0; }
     .brand { margin: 10px 0 0 0; }
     .slogan-line { text-align: center; }
     .slogan { font-weight: 300; text-transform: uppercase; text-align: center; width: 80%; padding: 20px 0 0 0; margin: 0 auto; }
     .about-block .img img { display: inline-block !important; }
-    .beauty-title { max-width: 400px; font-size: 20pt; }
+    .beauty-title { max-width: 400px; font-size: 14pt; }
 
     header { min-height: auto; }
     header nav { margin-top: 10px; margin-bottom: 20px; }
