--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -43,6 +43,10 @@ nav .navbar-brand img { display: inline-block; }
     padding: 10px 10px 10px 40px;
 }
 
+.categories-list .categories-caption {
+    background: #eee;
+}
+
 .categories-list a.depth-2 {
     padding: 10px 10px 10px 60px;
 }
