--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22,9 +22,12 @@ header { min-height: 750px; background: #4b4539 url('../img/picture-1.jpg') cent
 .header-text { font-size: 50pt; font-family: 'Exo 2', sans-serif; text-transform: uppercase; color: #000; font-weight: 100; }
 .header-link { display: inline-block; margin: 50px 0 0 0; background: #fff; color: #000; text-transform: uppercase; padding: 10px 20px; }
 
+#header-small { background: #eee; border-bottom: 2px solid #ddd; }
+
 .menu-button { margin: 30px 0 0 30px; cursor: pointer; text-transform: uppercase; font-size: 12pt; font-weight: 700; color: #4b1a4e; background: url('../img/menu-icon.png') left center no-repeat; padding-left: 45px; padding-top: 2px; }
 .brand-name { margin: 30px 0 0 0; text-transform: uppercase; font-size: 12pt; font-weight: 700; color: #4b1a4e; }
 .stamp-dg { margin: 10px 0 0 0; width: 150px; height: 166px; background: url('../img/stamp-dg.png') top left no-repeat; display: inline-block; }
+.stamp-dg-mini { margin: 10px 0 0 0; width: 70px; height: 78px; background: url('../img/stamp-dg-mini.png') top left no-repeat; display: inline-block; }
 
 #owner { text-align: center; background: #f9fafb; }
 .owner-picture { display: inline-block; margin: -100px 0 0 0; padding: 20px; background: #fff; }
@@ -42,31 +45,6 @@ header { min-height: 750px; background: #4b4539 url('../img/picture-1.jpg') cent
 .collection-item .color div { width: 40px; height: 5px; }
 .collection-item .color-red { background: #dcb2b9; }
 .collection-item .color-white { background: #f3e9bc; }
-
-nav { text-align: center; background: #333; margin: -52px 0 0 0; position: relative; z-index: 5; }
-nav ul { *zoom:1; list-style: none; padding: 0; margin: 0; font-size: 12pt; display: inline-block; }
-nav ul:before, nav ul:after { content:""; display:table; }
-nav ul:after { clear:both; }
-nav ul > li { display: inline-block; position:relative; margin: 0 10px; }
-nav a { color: #fff; text-transform: uppercase; display: block; padding: 15px 5px; }
-nav li:hover > a { text-decoration:none; background:#fff; color: #333; }
-nav li ul { background:#273754; }
-nav li ul li { width:200px; text-align: left; margin: 0; font-size: 12pt; }
-nav li ul a { border:none; padding: 5px 10px; }
-nav li ul a:hover { background:rgba(0,0,0,0.2); color: #fff; }
-nav li ul { position:absolute; left:0; top:34px; z-index:1; visibility:hidden; opacity:0; filter:alpha(opacity=0); transition:200ms ease; }
-nav ul > li:hover ul { visibility:visible; opacity:1; filter:alpha(opacity=100); }
-
-.logo-small { display: none; margin: 0 50px 0 0; }
-nav.fixed .brand-name { color: #eee; font-style: italic; font-size: 14pt; }
-nav.fixed .brand-location { font-size: 12pt; border-top: 1px solid #777; }
-
-nav.fixed { z-index: 9999; position: fixed; left: 0; top: 0; margin: 0; padding: 0 0 10px 0; width: 100%; background: #333; box-shadow: 2px 2px 10px rgba(0,0,0,0.5); }
-nav.fixed .logo-small { display: inline-block; }
-nav.fixed > ul { display: inline-block; position: relative; margin: 0; background: none; }
-nav.fixed a { color: #fff; }
-nav.fixed li ul a { color: #fff; }
-#fixed-padding { height: 67px; }
 
 .content { min-height: 400px; padding: 0 0 100px 0; }
 .product-tile { border: 1px solid #eee; padding: 15px; text-align: center; min-height: 500px; }
@@ -104,10 +82,51 @@ footer { padding: 50px 0; border-top: 5px solid #eee; }
 .slider-controls { text-align: center; margin: 125px 0 0 0; }
 .slider-controls span { display: inline-block; cursor: pointer; margin: 0 5px; background: #fff; border: 1px solid #bbb; height: 10px; width: 10px; border-radius: 50%; box-shadow: 2px 2px 10px rgba(0,0,0,0.5); }
 
-.icon-bar { border-color: #fff; border-width: 1px; border-style: solid; }
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: #4b1a4e; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
 
-nav.fixed { z-index: 999; }
-.navbar-header { background: #333; }
+/* The navigation menu links */
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #fff;
+    display: block;
+    transition: 0.3s
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+
+
+
 
 /* -------------------- Responsive classes ------------------- */
 
