--- a/public/css/app.css
+++ b/public/css/app.css
@@ -140,7 +140,8 @@ body { background: url('../img/website-bg.jpg') top center fixed; }
 /* Extra small devices - less than 768 */
 @media (max-width: 767px) {
     .top-menu { margin-top: 35px; }
-    .top-menu li { display: block; margin: 0; font-size: 8pt; }
+    .top-menu li { display: block; margin: 0; font-size: 9pt; }
+    .logo { margin-top: 20px; }
     .owner-photo { width: 100%; }
     .quality-text { font-size: 8pt; letter-spacing: normal; margin-left: 0; }
     .contacts-text { font-size: 8pt; }
