--- a/public/css/app.css
+++ b/public/css/app.css
@@ -35,7 +35,7 @@ body { background: url('../img/website-bg.jpg') top center fixed; }
 .logo img { margin: 0 auto; }
 
 #content { margin: 60px 0 0 0; }
-.container-content { background: #fff; }
+.container-content { background: rgba(255,255,255,1); }
 .content-padding { padding: 0 30px; }
 .carousel { margin: 80px 0 0 0; }
 .carousel div { float: left; }
